--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,239 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+
+.nav{
+
+  grid-area: header;
+  height: 20vh;
+  width: 100%;
+  background-color: #7b6ff6;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: 
+  
+          "score title timer"
+
+  ;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: white;
+
+
+  
+
 }
+
+.scores{
+
+  grid-area: score;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.title{
+  grid-area: title;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+}
+
+.timer{
+
+  grid-area: timer;
+  background-color: #574eb6;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.btn{
+
+
+  border-radius: 10px;
+  background-color: #221d5d;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.boxes{
+
+  grid-area: main;
+  margin-top: 1px;
+}
+
+.cutie{
+  background-color: white;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 0.25fr 2.75fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: 
+ 
+         "del name punctaj"
+
+ ;
+
+
+ height: 50px;
+ border: 1px solid lightgrey;
+}
+
+
+
+.deletePlayer{
+
+  grid-area: del;
+
+
+  color: white;
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+  
+  
+}
+
+.deletePlayer:hover{
+
+  color: red;
+  cursor: pointer;
+
+}
+
+
+
+.name{
+
+  grid-area: name;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.punctaj{
+
+  grid-area: punctaj;
+  display: grid;
+
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: 
+  
+      "minus noPoints plus"
+  
+  
+  ;
+
+
+
+
+
+
+}
+
+
+
+.minus{
+
+  background-color: lightgrey;
+  color: grey;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.noPoints{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+}
+
+
+.plus{
+
+  background-color: lightgrey;
+  color: grey;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.adding{
+
+  grid-area: footer;
+
+  background-color: #7b6ff6;
+  display: flex;
+  flex-direction: row;
+
+  align-items: center;
+  height: 70px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  
+}
+
+.playerName{
+
+  height: 35px;
+  width: 70%;
+
+  margin-left: 15px;
+  border: none;
+  background-color: #221d5d;
+  border-radius: 10px;
+  cursor: pointer;
+  color: white;
+}
+
+.addBtn{
+
+
+  height: 35px;
+  width: 10%;
+  border: none;
+  color: white;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: 10px;
+  background-color: #221d5d;
+  padding: 10px;
+  cursor: pointer;
+ 
+
+}
+
+#add{
+
+  font-size: 12px;
+}
+
+
+
+
+
+
